<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height ="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="NestedWeights">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="NestedWeights"
                android:padding="15dp">

                <EditText
                    android:id="@+id/inputText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:background="@null"
                    android:textSize="32sp"
                    android:textAlignment="textEnd"
                    android:gravity="center"
                    android:textColor="@color/black"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="15dp">
                <TextView
                    android:id="@+id/displayAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:textSize="24sp"
                    android:textAlignment="textEnd"
                    android:gravity="center"
                    android:textColor="@color/gray"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">


                <ImageButton
                    android:id="@+id/btnHistory"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/history_time_png"
                    tools:ignore="TouchTargetSizeCheck" />
            <ImageButton
                android:id="@+id/btnConverter"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ruler"
                android:background="@null"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

                <ImageButton
                    android:id="@+id/btnScienCalc"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="changeScreenOrientation"
                    android:scaleType="fitCenter"
                    android:src="@drawable/engineering_calc" />

                <ImageButton
                    android:id="@+id/btnBackspace"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_weight="4"
                    android:background="@null"
                    android:onClick="backspaceBtnPush"
                    android:padding="5dp"
                    android:paddingEnd="20dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/backspace" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="?android:attr/listDivider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="clearBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/C"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="32sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnParentheses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="parenthesesBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/parentheses"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnPercent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="percentBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/percent"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="divideBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/divide"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="32sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="sevenBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/sevenText"
                android:textAlignment="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="eightBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/eightText"
                android:textAlignment="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="nineBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/nineText"
                android:textAlignment="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="multiplyBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/multiply"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="32sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="fourBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/fourText"
                android:textAlignment="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="fiveBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/fiveText"
                android:textAlignment="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="sixBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/sixText"
                android:textAlignment="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="subtractBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/subtract"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="32sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="oneBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/oneText"
                android:textAlignment="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="twoBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/twoText"
                android:textAlignment="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="threeBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/threeText"
                android:textAlignment="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="addBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/add"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="32sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNegative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="negativeBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/negative"
                android:textAlignment="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="zeroBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:onClick="pointBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/point"
                android:textAlignment="center"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:backgroundTint="@color/parakeet"
                android:onClick="equalsBtnPush"
                android:stateListAnimator="@null"
                android:text="@string/equals"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
